# DeepGraph

./: README.md  main.py  pyproject.toml  start_web_logger.py
config/: analysis_frame.json  nebula_schema.json  schema.py  settings.py
src/agents/: base.py  planner.py  reporter.py  worker.py
src/context/: base.py  context_6282c00a.json  local.py
src/models/: base.py  events.py
src/prompts/: planner_prompts.py  reporter_prompts.py  worker_prompts.py
src/tools/: anomaly_detect.py  anomaly_source.py  code.py  detect_anomaly.py  final_report.py  indicator_calculator.py  nebula_query_tool.py  source_anomaly.py  summary.py  tools.md  web.py
src/utils/: logger.py  nebula.py  retriever.py  tools.py  web_logger.py
src/workflow/: server.py  workflow.py
src/workflow/static/: app.js  style.css
src/workflow/templates/: dashboard.html
tests/: test_nebula_connection.py
